# myco-testing

./: .gitignore  Cargo.toml  README.md  justfile  test_enron_integration.sh
.github/workflows/: rust.yml
experiments/: Cargo.toml
myco/: Cargo.toml  build.rs
myco/src/: client.rs  constants.rs  crypto.rs  dtypes.rs  enron_data.rs  error.rs  lib.rs  logging.rs  megaclient.rs  server1.rs  server2.rs  tree.rs  utils.rs
myco/src/network/: common.rs  mod.rs  server1.rs  server2.rs
myco/src/proto/: mod.rs  myco.proto  myco.rs
myco/tests/: test_dtypes.rs  test_e2e.rs  test_tree.rs  test_util.rs
sparta-data/: clean_local.py
