[package]
name = "myco"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.7", features = ["ctr"] }
aes-gcm = "0.10.3"
block-padding = "0.3"
cbc = "0.1.2"
hex = "0.4"
rand = "0.8.5"
ring = "0.17.8"
sha2 = "0.10.8"
thiserror = "1.0.63"
rayon = "1.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.213", features = ["derive"] }
bincode = "1.3.3"
dashmap = "6.1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
futures = "0.3"
lazy_static = "1.4.0"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum = "0.7.7"
reqwest = { version = "0.12.9", features = ["json"] }
anyhow = "1.0.92"
tower = "0.4"
tower-http = { version = "0.4", features = ["timeout", "trace"] }
socket2 = "0.5"
cfg-if = "1.0.0"
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
tokio-stream = "0.1"
sys-info = "0.9"
num_cpus = "1.15"
async-trait = "0.1"
ed25519-dalek = "1.0"
csv = "1.3"

[features]
bandwidth = []

[build-dependencies]
tonic-build = "0.10"
